반응형 작업중(헤더 완료)

--- a/assets/scss/_mixin.scss
+++ b/assets/scss/_mixin.scss
@@ -15,9 +15,9 @@
     color:#000000;word-break:break-all;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp:$count;overflow: hidden;
 }
 
-$breakpoint-smallphones : 359px;
-$breakpoint-middlephones : 420px;
-$breakpoint-phones : 767px;
-$breakpoint-tablets : 1280px;
-$breakpoint-widepc : 1921px;
+$smallphones : 359px;
+$middlephones : 420px;
+$phones : 767px;
+$tablets : 1280px;
+$widepc : 1921px;
 
