--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,3 +1,4 @@
+/* layout */
 html:not(.touchmode) {
     ::-webkit-scrollbar {width: 10px;}
     ::-webkit-scrollbar-thumb {background-color: #ccc;border-radius: 10px;background-clip: padding-box;border: 2px solid transparent;}
@@ -34,9 +35,9 @@ html:not(.touchmode) {
 .toplogo-link {
     display: inline-flex;
     align-items: flex-end;
-
+    
     img {
-        vertical-align: top;
+        vertical-align: top;max-width:rem(240);
     }
 }
 
@@ -46,6 +47,105 @@ html:not(.touchmode) {
     opacity: .6;
     line-height: 1;
     margin-left: rem(10)
+}
+
+
+.btn-panel-menu {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: rem(55);
+    height: rem(55);
+    z-index: 5;
+    position: absolute;
+    top: 0;
+    right: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    &:before, &:after {
+        display: block;
+        content: "";
+        width: 20px;
+        height: 2px;
+        background: #000;
+        border-radius: 2px;
+    }
+}
+  
+.btn-panel-menu-ico {
+    display: block;
+    width: rem(20);
+    height: rem(2);
+    background: #000;
+    border-radius: rem(2);
+    margin: rem(5) 0;
+}
+
+.mobile-menu-zone{
+    display:none;
+    z-index:100;
+    position: fixed;
+    top:0; right:0;
+    width:100%; height:100%;
+    &:before{
+        display:block; content:'';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        opacity: 0;
+        transition: 0.5s;
+    }
+
+    &.active{
+        display:block;
+        &.motion{
+            &:before{
+                opacity: 0.8;
+            }
+            .mobile-menu-wrap{right: 0;}
+            .btn-mobile-menu-close{opacity: 1;}
+        }
+    }
+}
+.mobile-menu-wrap{
+    display:flex; flex-direction: column;
+    width: rem(247); height:100%;
+    transition: 0.5s;
+    position:absolute;top:0;right:rem(-247);
+    background:#fff;
+}
+.btn-mobile-menu-close{
+    display:block; width:rem(55); height:rem(55); opacity: 0;
+    transition: 0.5s;
+    position:absolute;top:0;left:rem(-55);
+    background:url("../images/btn_totalclose.png") no-repeat 0 0/100% auto;
+}
+.mobile-menu-inner{
+    position: relative;
+    overflow-y: auto;
+    flex: 1;
+}
+.mobile-menu-list{
+    > li{
+        &:last-of-type{}
+    }
+}
+.mobile-menu{
+    display: block;
+    color: #000;
+    font-size: rem(13);
+    padding: rem(22) rem(30) rem(22) rem(30);
+    line-height: 1;
+    position: relative;
+    font-family: 'Digital Desolation', sans-serif;
+}
+.btn-mobile-menu-close{
+
 }
 
 .header-main-cols {
@@ -184,6 +284,19 @@ html:not(.touchmode) {
     color: #a1a1a1;
     margin-left: rem(30)
 }
+@media (max-width:$phones){
+    .header-inner{
+        height: rem(55); padding:0 rem(55) 0 rem(20);
+    }
+    .toplogo-link{
+        flex-direction: column; justify-content: flex-start; align-items: flex-start;
+        img{max-width: rem(180);}
+    }
+    .toplogo-text{display:none;}
+    .header-main-cols{display:none;}
+    .btn-panel-menu{display:flex;}
+}
+
 
 /* content */
 .profile-wrap {}
