--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -294,7 +294,7 @@ html:not(.touchmode) {
     .toplogo-text{display:none;}
     .header-main-cols{display:none;}
     .btn-panel-menu{display:flex;}
-    .middle-templete{display:block;}
+    .middle-templete{display:block;padding:0 rem(20);}
     .middle-left-item {
         padding: rem(30) 0 0 0;
     }
