--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -647,9 +647,9 @@ html:not(.touchmode) {
 
 .gallery-wrap{}
 .gallery-list{
-    display:flex; flex-wrap:wrap; gap:rem(30) rem(20); margin-right:-20px;
+    display:flex; flex-wrap:wrap; gap:rem(30) rem(20); margin-right:rem(-20);
     > li{
-        flex: 0 0 calc(25% - 20px);
+        flex: 0 0 calc(25% - rem(20));
         &:last-of-type{}
     }
 }
@@ -658,8 +658,8 @@ html:not(.touchmode) {
     display:block;box-shadow: 1px 2px 12px -1px rgba(0,0,0,0.15);
     -webkit-box-shadow: 1px 2px 12px -1px rgba(0,0,0,0.15);
     -moz-box-shadow: 1px 2px 12px -1px rgba(0,0,0,0.15); 
-    border-radius: rem(10); position:relative; overflow:hidden;
-    > img{width:100%;vertical-align: top;}
+    border-radius: rem(10); position:relative; overflow:hidden; padding-bottom:62.5%;
+    > img{width:100%;vertical-align: top;object-fit: cover; object-position: 0 0; position:absolute;top:0;left:0;height:100%;}
 }
 .gallery-spec-row{margin-top:rem(15);}
 .gallery-spec-main{font-size:rem(17); color:#000; font-weight:500; display:inline; word-break: keep-all;}
@@ -778,4 +778,16 @@ html:not(.touchmode) {
     }
 
     .timeline-project-title{font-size:rem(13);}
+
+    .gallery-list{
+        > li{
+            flex: 0 0 calc(50% - rem(20));
+        }
+    }
+    .gallery-thum-row{
+        border-radius: rem(5);
+    }
+    .gallery-spec-main{font-size:rem(16);}
+    .gallery-spec-sub{font-size:rem(13);}
+    .gallery-spec-link{max-width:rem(20);}
 }
