--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -789,5 +789,5 @@ html:not(.touchmode) {
     }
     .gallery-spec-main{font-size:rem(16);}
     .gallery-spec-sub{font-size:rem(13);}
-    .gallery-spec-link{max-width:rem(20);}
+    .gallery-spec-link{max-width:rem(20);top:0;}
 }
