--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1432,6 +1432,7 @@ html:not(.touchmode) ::-webkit-scrollbar-track {
 
 .middle-right-title-count {
   margin-top: 0.3125rem;
+  font-size: 1rem;
 }
 
 .block-item {
@@ -1523,6 +1524,9 @@ html:not(.touchmode) ::-webkit-scrollbar-track {
   }
   .middle-right-title {
     font-size: 1.25rem;
+  }
+  .middle-right-title-count {
+    font-size: 0.875rem;
   }
   .block-title {
     font-size: 1.25rem;
